--- a/client/src/components/TaskList.css
+++ b/client/src/components/TaskList.css
@@ -73,8 +73,15 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 18px;
+  gap: 8px;
   flex: 1;
+}
+
+.task-category-container {
+  min-width: 150px;
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 16px;
 }
 
 .task-text {
